# UE-Sim

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DAILY_STATUS_REPORT.md  EXECUTION_STATUS_AND_NEXT_STEPS.md  FINAL_ACHIEVEMENT_CERTIFICATION.md  FINAL_IMMEDIATE_EXECUTION_PLAN.md  FINAL_PROJECT_STATUS.md  FINAL_PROJECT_STATUS_REPORT.md  FINAL_RELEASE_CONFIRMATION.md  FINAL_RELEASE_EXECUTION.md  FOREMAN_TASK.md  GITHUB_IMMEDIATE_RELEASE_GUIDE.md  GITHUB_PUSH_INSTRUCTIONS.md  GITHUB_RELEASE_ANNOUNCEMENT.md  GITHUB_RELEASE_COMPLETION_REPORT.md  GITHUB_RELEASE_EXECUTION.md  GITHUB_RELEASE_SUMMARY.md  HISTORIC_MILESTONE_CELEBRATION.md  IMMEDIATE_GITHUB_RELEASE_EXECUTION.md  IMMEDIATE_GITHUB_RELEASE_GUIDE.md  IMMEDIATE_RELEASE_ACTIONS.md  LAUNCH_ANNOUNCEMENT.md  LICENSE  MILESTONE_ACHIEVEMENT_REPORT.md  NS3-CONTRIB-PULL-REQUEST.md  NS3-CONTRIBUT-INTEGRATION.md  NS3_CONTRIB_IMMEDIATE_SUBMISSION_GUIDE.md  PERFORMANCE_BENCHMARK_REPORT.md  PHASE2_EXECUTION_READINESS_REPORT.md  PHASE_2_TECHNICAL_DOMINANCE_COMPLETION_REPORT.md  POR.md  PROJECT.md  PROJECT_COMPLETION_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_EXECUTION_SUMMARY.md  README.md  RELEASE_CHECKLIST.md  SIGCOMM_IMMEDIATE_ACADEMIC_OUTREACH_GUIDE.md  (+31 more)
src/soft-ue/: CMakeLists.txt
src/soft-ue/doc/: soft-ue.rst
src/soft-ue/examples/: soft-ue-basic-demo.cc  soft-ue-demo.cc  soft-ue-e2e-demo.cc  verify-soft-ue.cc
src/soft-ue/helper/: soft-ue-helper.cc  soft-ue-helper.h
src/soft-ue/model/common/: soft-ue-logger.cc  soft-ue-logger.h  soft-ue-packet-tag.cc  soft-ue-packet-tag.h  transport-layer.h
src/soft-ue/model/network/: soft-ue-channel.cc  soft-ue-channel.h  soft-ue-net-device.cc  soft-ue-net-device.h
src/soft-ue/model/pdc/: ipdc.cc  ipdc.h  pdc-base.cc  pdc-base.h  tpdc.cc  tpdc.h
src/soft-ue/model/pds/: pds-common.h  pds-header.cc  pds-manager.cc  pds-manager.h  pds-statistics.cc
src/soft-ue/model/ses/: msn-entry.cc  msn-entry.h  (+4 more)
src/soft-ue/test/: All-Test-Results.md  pds-full-test.cc  pds-manager-test.cc  ses-manager-test.cc  tpdc-test.cc
(+142 files in other folders)
